--- a/README.rdoc
+++ b/README.rdoc
@@ -1,7 +1,9 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+Based on this tutorial: http://www.sitepoint.com/fire-up-your-e-commerce-site-with-solidus
+
+This README would normally document whatever steps are necessary
+to get the application up and running.
 
 Things you may want to cover:
 
@@ -23,6 +25,5 @@ Things you may want to cover:
 
 * ...
 
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+Please feel free to use a different markup language if you do not
+plan to run <tt>rake doc:app</tt>.
